Bug 457586 - when moving the area with transforming tool using arrow keys, the preview doesn't update on the canvas when the option is 'Fast'.
Summary: when moving the area with transforming tool using arrow keys, the preview doe...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression, triaged
Depends on:
Blocks:
 
Reported: 2022-08-07 12:06 UTC by acc4commissions
Modified: 2023-05-18 16:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2022-08-07 12:06:56 UTC
SUMMARY
git 9901f95

It has been happening for a while.
The title says it all. 


STEPS TO REPRODUCE
1. Select an area or just select the layer and trigger the transform, and make sure that you're using 'Fast' preview option.
2. Press arrow keys to move it.

OBSERVED RESULT
The preview on the canvas doesn't update. However it applies when the transformation is done. 

EXPECTED RESULT
It should show. It used to.

SOFTWARE/OS VERSIONS
Windows: Win10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Tiar 2022-08-10 11:51:52 UTC
It worked fine in 5.0.6, but is broken in Krita 5.1.0-RC1.
Comment 2 acc4commissions 2022-11-17 17:45:08 UTC
Can this be fixed anytime soon? It's a small issue but it's really pesky;
I can't really use other preview modes other than Fast, because Liquify becomes basically unusable with those.
Comment 3 acc4commissions 2023-03-15 12:58:02 UTC
Hope this one is addressed in 5.2.
Comment 4 Bug Janitor Service 2023-03-17 00:09:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1775
Comment 5 Tiar 2023-05-15 02:27:09 UTC
Git commit aa6c5da0c0dd93845e892fff21d2753c6fca4e85 by Agata Cacko.
Committed on 15/05/2023 at 01:50.
Pushed by tymond into branch 'master'.

Fix Transform Tool to update on arrow keys on Fast

Before this commit, transform tool wouldn't update the canvas
when the user used arrow keys to move the content using
the Fast preview type.

M  +2    -0    plugins/tools/tool_transform2/kis_tool_transform.cc

https://invent.kde.org/graphics/krita/commit/aa6c5da0c0dd93845e892fff21d2753c6fca4e85
Comment 6 acc4commissions 2023-05-18 16:42:13 UTC
Thanks so much.