Fix Transform Tool to update on arrow keys on Fast

Before this commit, transform tool wouldn't update the canvas
when the user used arrow keys to move the content using
the Fast preview type.

BUG:457586